--- a/Aufgabe_09/Virus.html
+++ b/Aufgabe_09/Virus.html
@@ -8,6 +8,7 @@
     <script src="Paths.js"></script>
     <script src="Virus.js"></script>
     <script src="Main.js"></script>
+    <script src="Antibody.js"></script>
 </head>
 
 <body>
