--- a/Aufgabe_09/Virus.html
+++ b/Aufgabe_09/Virus.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virus Animation</title>
     <script src="Vector.js"></script>
-    <script src="Paths.js"></script>
+    <!-- <script src="Paths.js"></script> -->
     <script src="Virus.js"></script>
     <script src="Main.js"></script>
     <script src="Antibody.js"></script>
+    <script src="Bloodcell.js"></script>
+    <script src="Killercell.js"></script>
 </head>
 
 <body>
