--- a/Aufgabe_09/Virus.html
+++ b/Aufgabe_09/Virus.html
@@ -14,6 +14,7 @@
 
 <body>
     <canvas width="750" height="400"></canvas>
+    <!-- Notiz: In Zusammenarbeit mit Elena Mayer -->
 </body>
 
 </html>
